fixed alignment on sign up page button

--- a/frontend/src/components/CSS/SignupForm.css
+++ b/frontend/src/components/CSS/SignupForm.css
@@ -39,7 +39,8 @@
   font-size: 16px;
   font-weight: 600;
   height: 50px;
-  width: 150px;
+  width: 175px;
+  margin-left: 10rem;
 }
 
 
